test/integration/bad/array-expr-decl-bad2.stan
data {
  blahblah[1,2] real x;
}
